# cpp-rythm

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  all_of.cpp  any_of.cpp  count_else.cpp  drop_n.cpp  drop_n_take_m.cpp  drop_nth.cpp  elapsed.cpp  none_of.cpp  schmitt_trigger.cpp  schmitt_trigger_inverting.cpp  take_n.cpp  take_n_drop_m.cpp  take_nth.cpp
include/rythm/: counting.hpp
rythm/: counting.hpp  predicate.hpp  trigger.hpp
tests/: CMakeLists.txt  all_of.cpp  any_of.cpp  count_else.cpp  count_false.cpp  count_if.cpp  count_true.cpp  count_zero.cpp  drop_n.cpp  drop_n_take_m.cpp  drop_nth.cpp  elapsed.cpp  none_of.cpp  schmitt_trigger.cpp  schmitt_trigger_inverting.cpp  take_n.cpp  take_n_drop_m.cpp  take_nth.cpp
